--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,11 @@ jobs:
 
     - name: Set up Visual Studio
       uses: microsoft/setup-msbuild@v1
+      
+    - name: Set up nmake
+      uses: ilammy/msvc-d...@v1.10.0
+      with:
+       arch: ${{ matrix.arch }} 
 
     - name: Build
       run: |
