--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,22 +3,12 @@ name: Build
 on: push
 
 jobs:
-  build:
-    runs-on: windows-latest
-
+  test:
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Visual Studio
-      uses: microsoft/setup-msbuild@v1
-      
-    - name: Set up nmake
-      uses: ilammy/msvc-d...@v1.10.0
-      with:
-       arch: ${{ matrix.arch }} 
-
-    - name: Build
-      run: |
-        nmake clean
-        nmake
+      - uses: actions/checkout@v2
+      - uses: ilammy/msvc-dev-cmd@v1
+      - name: Build something requiring CL.EXE
+        run: |
+          cmake -G "NMake clean" .
+          nmake
+      # ...
