--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,8 @@ name: Build
 on: push
 
 jobs:
+  my-job:
+    name: My Job
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v2
